# dj_ferris

./: .gitignore  Cargo.toml  Dockerfile  README.md  application-example.yml  compose.yml
.github/workflows/: prtests.yml
src/: commands.rs  events.rs  lib.rs  main.rs
src/commands/: goto.rs  help.rs  join.rs  leave.rs  loop_track.rs  np.rs  play.rs  queue.rs  skip.rs  stop.rs
